[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Audio/enemy_die.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/steps.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/zombie_bite.wav" type="AudioStream" id=5]
[ext_resource path="res://Models/humanoid_base.tscn" type="PackedScene" id=6]

[sub_resource type="CylinderShape3D" id=1]
radius = 8.0
height = 1.8

[sub_resource type="CapsuleShape3D" id=2]
radius = 0.5
height = 0.8

[sub_resource type="StandardMaterial3D" id=3]

[node name="Enemy" type="CharacterBody3D" groups=[
"Hostiles",
]]
collision_layer = 8
collision_mask = 30
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Detect_Visual" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 22

[node name="CollisionShape3D" type="CollisionShape3D" parent="Detect_Visual"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )
shape = SubResource( 1 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
shape = SubResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )

[node name="StepSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
pitch_scale = 0.74

[node name="Body" parent="." instance=ExtResource( 6 )]

[node name="Head" parent="Body" index="3"]
transform = Transform3D( 0.996195, 0, -0.0871558, 0, 1, 0, 0.0871558, 0, 0.996195, 0, 1.595, 0 )
material/0 = SubResource( 3 )

[node name="Look" parent="Body/Head" index="0"]
collision_mask = 6

[node name="Torso" parent="Body" index="4"]
material/0 = SubResource( 3 )

[node name="ArmRight" parent="Body" index="5"]
transform = Transform3D( 1, 0, 0, 0, 0.996195, 0.0871558, 0, -0.0871558, 0.996195, 0.225, 1.23, 0 )
material/0 = SubResource( 3 )

[node name="ArmLeft" parent="Body" index="6"]
transform = Transform3D( 1, 0, 0, 0, 0.996195, -0.0871557, 0, 0.0871558, 0.996195, -0.225, 1.23, 0 )
material/0 = SubResource( 3 )

[node name="LegLeft" parent="Body" index="7"]
material/0 = SubResource( 3 )

[node name="LegRight" parent="Body" index="8"]
material/0 = SubResource( 3 )

[connection signal="body_entered" from="Detect_Visual" to="." method="_on_Detect_Visual_body_entered"]
[connection signal="body_exited" from="Detect_Visual" to="." method="_on_Detect_Visual_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="NavTimer" to="." method="_on_NavTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="Body"]
